public/index.css
/* ... */
  marker-list [type='caption'] {
    width: 100%;
    display: flex;
    margin-bottom: .62rem; }
    marker-list [type='caption'].folded:not(.searched):not(.active) {
      display: none; }
    marker-list [type='caption'] a {
      flex: 1 1 auto;
      text-decoration: none;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
      font-size: .8rem;
      color: rgba(255, 255, 255, 0.5); }
      marker-list [type='caption'] a:hover {
        color: rgba(255, 255, 255, 0.7);
        cursor: default;
        text-decoration: underline; }
    marker-list [type='caption'].active a {
      color: #a41034; }
    marker-list [type='caption'] b {
      background: yellow;
      color: #121212; }
    marker-list [type='caption'] span {
      color: #fff;
      font-size: .8rem;
      padding-right: .5rem;
      color: rgba(255, 255, 255, 0.75); }
  marker-list .searched:not(.matched) {
    display: none; }
marker-search {
  position: relative;
  flex: 1 1 auto;
  color: rgba(255, 255, 255, 0.7); }
  marker-search:hover {
    color: rgba(255, 255, 255, 0.9); }
  marker-search input {
    width: 100%;
    padding: 1.5rem;
    font-size: 1.2rem;
    border: 1px solid rgba(0, 0, 0, 0.1);
    background: #212121;
    color: #f2f2f2;
    padding-left: 4.5rem; }
  marker-search > svg {
    position: absolute;
    left: 1rem;
    top: 50%;
    transform: translateY(-50%);
    fill: currentColor;
    width: 2.5rem;
    height: 2.5rem; }
  marker-search input:hover ~ svg,
  marker-search input:focus ~ svg {
    fill: rgba(255, 255, 255, 0.9); }
marker-teleprompter {
  position: absolute;
  left: 0;
  top: auto;
  bottom: 5rem;
  width: 100%;
  display: flex;
  transform: translateY(0);
  transition: all .3s; }
  marker-teleprompter.hidden {
    display: none; }
  marker-teleprompter b {
    display: inline;
    font-size: inherit;
    font-weight: inherit; }
  marker-teleprompter [type='chapter'] {
    display: none; }
  marker-teleprompter [type='caption'] {
    margin: auto;
    max-width: 100%;
    width: auto;
    background: rgba(0, 0, 0, 0.7); }
    marker-teleprompter [type='caption'] a {
      font-size: calc(.5rem + 1vw);
      line-height: 1.5;
      text-decoration: none;
      text-align: center;
      padding: calc(.5rem + .5vw);
      color: #fff;
      max-width: 70ex; }
    marker-teleprompter [type='caption'] span, marker-teleprompter [type='caption']:not(.active) {
      display: none; }

main.hidden marker-teleprompter {
  transform: translateY(3rem); }
marker-timeline {
  position: relative;
  flex: 1 1 auto;
  display: flex;
  width: 100%;
  height: 1.1rem;
  background: #333;
  box-shadow: 0 0.25rem 0.25rem rgba(0, 0, 0, 0.5);
  z-index: 1; }
  marker-timeline [type='chapter'] {
    position: relative;
    display: block;
    width: .25rem;
    background: rgba(0, 0, 0, 0.3); }
    marker-timeline [type='chapter']:hover {
      background: rgba(0, 0, 0, 0.5); }
      marker-timeline [type='chapter']:hover::after {
        content: attr(title);
        position: absolute;
        top: 0;
        left: 0;
        transform: translate(-50%, -125%);
        background: #000;
        padding: 5px;
        z-index: 9999;
        white-space: nowrap; }
  marker-timeline [type='caption'] {
    display: block;
    background: rgba(0, 0, 0, 0.1); }
    marker-timeline [type='caption']:hover {
      background: rgba(0, 0, 0, 0.2); }
    marker-timeline [type='caption'].searched.matched {
      border-left: 1px solid rgba(255, 255, 255, 0.1); }
    marker-timeline [type='caption'].active {
      min-width: 2px;
      background: #a41034; }
  marker-timeline span {
    display: none !important; }
video-controls {
  display: flex; }
  video-controls > * + * {
    border-left: 1px solid #000; }
  video-controls [disabled] {
    display: none !important; }
  video-controls button {
    padding: .75rem;
    background: #212121; }
    video-controls button svg {
      width: 1.5rem;
      height: 1.5rem;
      fill: rgba(255, 255, 255, 0.8); }
    video-controls button:hover svg {
      fill: white; }
  video-controls .video-play-pause.playing svg:first-child {
    display: none; }
  video-controls .video-play-pause:not(.playing) svg:last-child {
    display: none; }
  video-controls .video-captions.active {
    background: #a41034; }

video-controls.mobile button {
  padding: 1rem; }

video-controls.mobile .seek-play-pause {
  display: none; }
video-download {
  position: relative; }
  video-download > button:hover ~ div,
  video-download div:hover {
    position: absolute;
    bottom: 100%;
    display: block;
    z-index: 10;
    left: -15px; }
  video-download a {
    background: #212121;
    padding: 1rem;
    color: rgba(255, 255, 255, 0.5); }
    video-download a:hover {
      background: #424242;
      color: white; }
  video-download div {
    display: none; }
video-main {
  width: 100%;
  height: 100%; }
  @media (orientation: landscape) {
    video-main::after {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
      background: transparent; } }
video-playback {
  position: relative;
  display: flex; }
  video-playback button.active {
    background: #a41034;
    color: #fff; }
  video-playback button {
    padding: 1rem;
    font-size: .8rem;
    user-select: none;
    color: rgba(255, 255, 255, 0.5); }
    video-playback button:hover {
      color: rgba(255, 255, 255, 0.8); }

